==> Samraksh/eMote/MicroFrameworkPK_v4_3/DeviceCode/Targets/Native/STM32F10x/DeviceCode/drivers/Timer/netmf_timers.cpp <==
#include <tinyhal.h>
#include <pwr/netmf_pwr.h>
#include "../Timer/Timer16Bit/netmf_timers16Bit.h"
#include "../Timer/advancedtimer/netmf_advancedtimer.h"
#include <intc/stm32.h>

BOOL CPU_Timer_Initialize(UINT16 Timer, BOOL IsOneShot, UINT32 Prescaler, HAL_CALLBACK_FPN ISR, void* ISR_PARAM)
{
	// Make sure timer input is not 0 in case macro is not defined or the timer is not trying to
	// re initialize the system  timer

	// Dont allow initializing of timers with NULL as the callback function
	if(ISR == NULL)
		return FALSE;

	////VirtualTimerHandlerFPN = ISR;

#ifdef TIMERDEBUG
		CPU_GPIO_EnableOutputPin((GPIO_PIN) 1, FALSE);
#endif

	// Call timer driver initialize
	////TODO: AnanthAtSamraksh - change comparison based on hardware timerIDs supported by the drivers
	if(Timer == TIMER1_16BIT || Timer == TIMER2_16BIT)
	{
		//if(!g_Timer16Bit_Driver.Initialize(Timer, IsOneShot, ClkSource, Prescaler, ISR, NULL))
		if(!g_Timer16Bit_Driver.Initialize(Timer, IsOneShot, Prescaler, ISR, NULL))
			return FALSE;
	}
	else if(Timer == ADVTIMER_32BIT )
	{
		if(g_STM32F10x_AdvancedTimer.Initialize(Prescaler, ISR, NULL) != DS_Success)
			return FALSE;
	}

	return TRUE;

}

BOOL CPU_Timer_SetCompare(UINT16 Timer, UINT32 CompareValue)
{
	// Check to make sure timer is not system timer
	/*if(Timer == 0 || Timer == g_Timer16Bit_Driver.c_SystemTimer)
		return FALSE;*/

	////TODO: AnanthAtSamraksh - change comparison based on hardware timerIDs supported
	if(Timer == TIMER1_16BIT || Timer == TIMER2_16BIT)
	{
		//AnanthAtSamraksh -- added below
		GLOBAL_LOCK(irq);
		//g_Time_Driver.m_nextCompare = CompareValue;
		bool fForceInterrupt = false;
		UINT64 CntrValue = HAL_Time_CurrentTicks();

		if(CompareValue <= CntrValue)
		{
			fForceInterrupt = true;
		}
		else
		{
			UINT32 diff;
			//If compare is greater than total counter value, this is the best we can do
			if((CompareValue - CntrValue) > g_Timer16Bit_Driver.c_MaxTimerValue)
			{
				diff = g_Timer16Bit_Driver.c_MaxTimerValue;
			}
			//Else store the difference
			else
			{
				diff = (UINT32)(CompareValue - CntrValue);
			}

			//Store the compare to now + diff
			g_Timer16Bit_Driver.SetCompare ( g_Timer16Bit_Driver.c_SystemTimer, (UINT16)(g_Timer16Bit_Driver.GetCounter( g_Timer16Bit_Driver.c_SystemTimer ) + diff));

			//If meanwhile happens
			if(HAL_Time_CurrentTicks() > CompareValue)
			{
				fForceInterrupt = true;
			}
		}

		if(fForceInterrupt)
		{
			// Force interrupt to process this.
			g_Timer16Bit_Driver.ForceInterrupt( g_Timer16Bit_Driver.c_SystemTimer );
		}

		//TODO: AnanthAtSamraksh -- g_Timer16Bit_Driver.GetCounter(Timer) returns a UINT16, whereas SetCompare takes a UINT32
		//g_Timer16Bit_Driver.SetCompare(Timer, g_Timer16Bit_Driver.GetCounter(Timer) + CompareValue);
	}
	else if(Timer == ADVTIMER_32BIT)
	{
		g_STM32F10x_AdvancedTimer.SetCompare(CPU_Timer_CurrentTicks(Timer), CompareValue, SET_COMPARE_TIMER);
	}

	return TRUE;
}

UINT16 CPU_Timer_GetCounter(UINT16 Timer)
{
	// Check to make sure timer is a legal timer
	// Typically should assert here, but returning 0
	////if(Timer < 0 || Timer > g_Timer16Bit_Driver.c_MaxTimers)
	//TODO: AnanthAtSamraksh - not checking if timer is greater than total timers configured.
	//This can be done in the if...else loop
	////if(Timer < 0 || Timer > NUM_VIRTUALTIMER_TIMERS)
	/*if(Timer < 0)
		return 0;*/

	////TODO: AnanthAtSamraksh - change comparison based on hardware timerIDs supported
	UINT16 counterValue = 0;
	if(Timer == TIMER1_16BIT || Timer == TIMER2_16BIT)
	{
		counterValue = g_Timer16Bit_Driver.GetCounter(Timer);
	}
	else if(Timer == ADVTIMER_32BIT)
	{
		counterValue = g_STM32F10x_AdvancedTimer.GetCounter();
	}

	return counterValue;
}

UINT16 CPU_Timer_SetCounter(UINT16 Timer, UINT32 Count)
{
	// Check to make sure timer is a legal timer
	// Typically should assert here, but returning 0
	////if(Timer < 0 || Timer > g_Timer16Bit_Driver.c_MaxTimers)
	//TODO: AnanthAtSamraksh - not checking if timer is greater than total timers configured.
	//This can be done in the if...else loop
	////if(Timer < 0 || Timer > NUM_VIRTUALTIMER_TIMERS)
	/*if(Timer < 0)
		return 0;*/

	////TODO: AnanthAtSamraksh - change comparison based on hardware timerIDs supported
	UINT16 counterValue = 0;
	if(Timer == TIMER1_16BIT || Timer == TIMER2_16BIT)
	{
		//counterValue = g_Timer16Bit_Driver.SetCounter(Timer, Count);
		g_Timer16Bit_Driver.SetCounter(Timer, Count);
	}
	else if(Timer == ADVTIMER_32BIT)
	{
		counterValue = g_STM32F10x_AdvancedTimer.SetCounter(Count);
	}

	return counterValue;
}

UINT64 CPU_Timer_CurrentTicks(UINT16 Timer)
{
	//TODO: AnanthAtSamraksh - not checking if timer is greater than total timers configured. T
	//This can be done in the if...else loop
	////if(Timer < 0 || Timer > NUM_VIRTUALTIMER_TIMERS)
	/*if(Timer < 0)
		return 0;*/

	UINT64 currentTicksValue = 0;
	if(Timer == TIMER1_16BIT || Timer == TIMER2_16BIT)
	{
		//AnanthAtSamraksh -- added below from
		UINT16 value;
		UINT32 m_lastRead = 0;
		GLOBAL_LOCK(irq);
		value = g_Timer16Bit_Driver.GetCounter(g_Timer16Bit_Driver.c_SystemTimer);

		// Nived.Sivadas
		// Workaround for the unusual didtimeroverflow bug, added another check
		UINT16 lastSixteenBits = m_lastRead & 0x0000FFFFull;
		////m_lastRead &= (0xFFFFFFFFFFFF0000ull);
		m_lastRead &= (0xFFFF0000ull);

		if(g_Timer16Bit_Driver.DidTimerOverFlow( g_Timer16Bit_Driver.c_SystemTimer ) || (value < lastSixteenBits))
		{
			g_Timer16Bit_Driver.ClearTimerOverFlow( g_Timer16Bit_Driver.c_SystemTimer );
			m_lastRead += (0x1ull << 16);
		}

		//Or else the value gets added simply
		m_lastRead += value;

		return m_lastRead;

		//TODO: AnanthAtSamraksh - what is the equivalent for 16 bit timer
		//currentTicksValue = g_Timer16Bit_Driver.GetCounter((UINT32)Timer);
	}
	else if(Timer == ADVTIMER_32BIT)
	{
		//GLOBAL_LOCK(irq);
		//AnanthAtSamraksh
		////currentTicksValue = g_STM32F10x_AdvancedTimer.Get64Counter();
		currentTicksValue = g_STM32F10x_AdvancedTimer.Get64Counter();
	}

	return currentTicksValue;
}

UINT32 CPU_Timer_GetMaxTicks(UINT8 Timer)
{
	UINT32 maxTicks = 0;
	if(Timer == TIMER1_16BIT || Timer == TIMER2_16BIT)
	{
		maxTicks = g_Timer16Bit_Driver.GetMaxTicks();
	}
	else if(Timer == ADVTIMER_32BIT)
	{
		maxTicks = g_STM32F10x_AdvancedTimer.GetMaxTicks();
	}
	return maxTicks;
}
