==> Samraksh/eMote/MicroFrameworkPK_v4_3/DeviceCode/Targets/Native/Max3263x/DeviceCode/drivers/Timer/netmf_timers.cpp <==
#include <tinyhal.h>
#include "timer_32bit/timer_32bit.h"
#include "../Timer/timer_rtc/timer_rtc.h"

BOOL CPU_Timer_Initialize(UINT16 Timer, BOOL IsOneShot, UINT32 Prescaler, HAL_CALLBACK_FPN ISR)
{
	// Dont allow initializing of timers with NULL as the callback function
	if(ISR == NULL)
		return FALSE;

#ifdef TIMERDEBUG
		CPU_GPIO_EnableOutputPin((GPIO_PIN) 1, FALSE);
#endif

	// Call timer driver initialize
	if(Timer == TIMER1_16BIT || Timer == TIMER2_16BIT)
	{
		//if(!g_Timer16Bit_Driver.Initialize(Timer, IsOneShot, Prescaler, ISR, NULL))
			return FALSE;
	}
	else if(Timer == ADVTIMER_32BIT )
	{
		if(g_Timer32Bit_Driver.InitializeOneShot(ISR, ADVTIMER_32BIT) != DS_Success)
			return FALSE;
		if(g_Timer32Bit_Driver.InitializeSystemTime() != DS_Success)
			return FALSE;
	}
	else if(Timer == RTC_32BIT )
	{
		if(!g_TimerRTC_Driver.Initialize(Prescaler, ISR))
			return FALSE;
	}

	return TRUE;
}

BOOL CPU_Timer_SetCompare(UINT16 Timer, UINT64 CompareValue)
{
	if(Timer == TIMER1_16BIT || Timer == TIMER2_16BIT)
	{
		/*//AnanthAtSamraksh -- added below
		GLOBAL_LOCK(irq);
		//g_Time_Driver.m_nextCompare = CompareValue;
		bool fForceInterrupt = false;
		UINT64 CntrValue = HAL_Time_CurrentTicks();

		if(CompareValue <= CntrValue)
		{
			fForceInterrupt = true;
		}
		else
		{
			UINT32 diff;
			//If compare is greater than total counter value, this is the best we can do
			if((CompareValue - CntrValue) > g_Timer16Bit_Driver.c_MaxTimerValue)
			{
				g_Timer16Bit_Driver.SetCompare ( g_Timer16Bit_Driver.c_SystemTimer, g_Timer16Bit_Driver.c_MaxTimerValue);
				diff = g_Timer16Bit_Driver.c_MaxTimerValue;
			}
			//Else store the difference
			else
			{
				g_Timer16Bit_Driver.SetCompare ( g_Timer16Bit_Driver.c_SystemTimer, CompareValue);
			}
		}

		if(fForceInterrupt)
		{
			// Force interrupt to process this.
			g_Timer16Bit_Driver.ForceInterrupt( g_Timer16Bit_Driver.c_SystemTimer );
		}*/

	}
	else if(Timer == ADVTIMER_32BIT)
	{
		g_Timer32Bit_Driver.SetCompare(CompareValue);
	}
	else if(Timer == RTC_32BIT)
	{
		g_TimerRTC_Driver.SetCompare(CompareValue);
	}

	return TRUE;
}

UINT32 CPU_Timer_GetCounter(UINT16 Timer)
{
	UINT32 counterValue = 0;
	if(Timer == TIMER1_16BIT || Timer == TIMER2_16BIT)
	{
		//counterValue = (UINT32)g_Timer16Bit_Driver.GetCounter(Timer);
	}
	else if(Timer == ADVTIMER_32BIT)
	{
		counterValue = g_Timer32Bit_Driver.GetCounter();
	}
	else if(Timer == RTC_32BIT)
	{
		counterValue = g_TimerRTC_Driver.GetCounter();
	}

	return counterValue;
}

UINT32 CPU_Timer_SetCounter(UINT16 Timer, UINT32 Count)
{
	UINT16 counterValue = 0;
	if(Timer == TIMER1_16BIT || Timer == TIMER2_16BIT)
	{
		//counterValue = g_Timer16Bit_Driver.SetCounter(Timer, Count);
		//g_Timer16Bit_Driver.SetCounter(Timer, Count);
	}
	else if(Timer == ADVTIMER_32BIT)
	{
		counterValue = g_Timer32Bit_Driver.SetCounter(Count);
	}
	else if(Timer == RTC_32BIT)
	{
		counterValue = g_TimerRTC_Driver.SetCounter(Count);
	}

	return counterValue;
}

UINT64 CPU_Timer_CurrentTicks(UINT16 Timer)
{
	UINT64 currentTicksValue = 0;
	if(Timer == TIMER1_16BIT || Timer == TIMER2_16BIT)
	{
		/*UINT16 value;
		UINT32 m_lastRead = 0;
		GLOBAL_LOCK(irq);
		value = g_Timer16Bit_Driver.GetCounter(g_Timer16Bit_Driver.c_SystemTimer);

		// Nived.Sivadas
		// Workaround for the unusual didtimeroverflow bug, added another check
		UINT16 lastSixteenBits = m_lastRead & 0x0000FFFFull;
		////m_lastRead &= (0xFFFFFFFFFFFF0000ull);
		m_lastRead &= (0xFFFF0000ull);

		if(g_Timer16Bit_Driver.DidTimerOverFlow( g_Timer16Bit_Driver.c_SystemTimer ) || (value < lastSixteenBits))
		{
			g_Timer16Bit_Driver.ClearTimerOverFlow( g_Timer16Bit_Driver.c_SystemTimer );
			m_lastRead += (0x1ull << 16);
		}

		//Or else the value gets added simply
		m_lastRead += value;

		return m_lastRead;*/
		return 0;
	}
	else if(Timer == ADVTIMER_32BIT)
	{
		currentTicksValue = g_Timer32Bit_Driver.Get64Counter();
	}
	else if(Timer == RTC_32BIT)
	{
		currentTicksValue = g_TimerRTC_Driver.Get64Counter();
	}

	return currentTicksValue;
}

UINT32 CPU_Timer_GetMaxTicks(UINT8 Timer)
{
	UINT32 maxTicks = 0;
	if(Timer == TIMER1_16BIT || Timer == TIMER2_16BIT)
	{
		//maxTicks = g_Timer16Bit_Driver.GetMaxTicks();
	}
	else if(Timer == ADVTIMER_32BIT)
	{
		maxTicks = g_Timer32Bit_Driver.GetMaxTicks();
	}
	else if(Timer == RTC_32BIT)
	{
		maxTicks = g_TimerRTC_Driver.GetMaxTicks();
	}
	return maxTicks;
}
